k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: panorai-service
  namespace: panorai
spec:
  type: LoadBalancer
  selector:
    app: panorai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
